Ansettelsesperiode har bruksperiode; fjern gruppering
